tests/reference/asr-read_err_label_nonliteral_01-2364f7c.stderr
semantic error: `err` must be a literal integer label
 --> tests/errors/read_err_label_nonliteral_01.f90:1:1
  |
1 | program read_err_label_nonliteral_01
  | ^ 
